RESOLVED FIXED37080
RenderProgress.cpp is missing CurrentTime.h
https://bugs.webkit.org/show_bug.cgi?id=37080
Summary RenderProgress.cpp is missing CurrentTime.h
Hajime Morrita
Reported 2010-04-05 03:41:27 PDT
On Chromium port, there is a compilation error when PROGRESS_TAG enabled, because RenderProgress.h is missing CurrentTime.h.
Attachments
v0; should be trivial (890 bytes, patch)
2010-04-05 03:48 PDT, Hajime Morrita
no flags
move inclusion to RenderProgress.cpp (911 bytes, patch)
2010-04-05 04:56 PDT, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2010-04-05 03:48:56 PDT
Created attachment 52524 [details] v0; should be trivial
Hajime Morrita
Comment 2 2010-04-05 03:49:57 PDT
Qt port may include it somewhere in port specific file.
Mark Rowe (bdash)
Comment 3 2010-04-05 04:14:55 PDT
Comment on attachment 52524 [details] v0; should be trivial CurrentTime.h not used within the header file. It should only be included where it’s used.
Hajime Morrita
Comment 4 2010-04-05 04:56:28 PDT
Created attachment 52525 [details] move inclusion to RenderProgress.cpp
Hajime Morrita
Comment 5 2010-04-05 04:58:23 PDT
bdash, thank you for reviewing. And you are definitely right. > CurrentTime.h not used within the header file. It should only be included > where it’s used. Fixed to move inclusion to RenderProgress.cpp I also updated the bug summary to reflect that.
Darin Adler
Comment 6 2010-04-05 08:35:46 PDT
Comment on attachment 52525 [details] move inclusion to RenderProgress.cpp Doesn't the file also need to include <math.h> or <wtf/MathExtras.h>?
Hajime Morrita
Comment 7 2010-04-05 18:33:28 PDT
(In reply to comment #6) > (From update of attachment 52525 [details]) > Doesn't the file also need to include <math.h> or <wtf/MathExtras.h>? I'm not sure. Chromium is successfully built only with CurrentTime.h. math.h might be included somewhere else.
WebKit Commit Bot
Comment 8 2010-04-05 23:59:46 PDT
Comment on attachment 52525 [details] move inclusion to RenderProgress.cpp Clearing flags on attachment: 52525 Committed r57130: <http://trac.webkit.org/changeset/57130>
WebKit Commit Bot
Comment 9 2010-04-05 23:59:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.