2010-04-05  MORITA Hajime  <morrita@google.com>

Reviewed by Darin Adler.

        RenderProgress.cpp is missing CurrentTime.h
        https://bugs.webkit.org/show_bug.cgi?id=37080

        No new tests. just fixed compilation error.

        * rendering/RenderProgress.cpp:

Canonical link: https://commits.webkit.org/48423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57130 268f45cc-cd09-0410-ab3c-d52691b4dbfc